styles/app.css
/* General */
* {
  box-sizing: border-box;
}

:root {
  --blue-primary: #172136;

  --purple-light-1: #fbfafb;
  --purple-light-2: #eeeaf2;
  --purple-medium-1: #aa83c8;
  --purple-medium-2: #8b48bf;
  --purple-medium-3: #5c218a;
  --purple-dark-1: #3e0f64;
  --purple-dark-2: #2a0646;

  --orange: #ff5200;
  --green: #06ff00;
  --aqua: #00ffab;
  --lightBlue: #00a1ab;
  --pink: #e900ff;
  --red: #6f0000;

  --font-family-titles: "Dosis", sans-serif;
  --font-family-text: "Red Hat Display", sans-serif;
  --font-weight-title1: 800;
  --font-weight-title2: 700;
  --font-weight-text1: 400;
  --font-weight-text2: 500;
}

body {
  background-color: var(--blue-primary);
  color: var(--purple-dark-2);
  font-family: var(--font-family-text);
  font-weight: var(--font-weight-text1);
  font-size: 16px;
  margin: 0;
  padding: 0;
}

h1,
h2,
h3 {
  margin: 0;
  padding: 0;
}

h1,
h2 {
  font-size: 24px;
  color: var(--purple-dark-2);
  font-family: var(--font-family-titles);
  font-weight: var(--font-weight-title1);
  margin: 0;
  padding: 0;
}

h2 {
  font-size: 18px;
  color: var(--purple-dark-1);
  font-weight: var(--font-weight-title2);
}

h3 {
  color: var(--purple-dark-2);
  font-weight: var(--font-weight-text2);
  font-size: 16px;
}

input {
  background-color: var(--purple-light-2);
  color: var(--blue-primary);
  border: none;
  font-size: 18px;
  padding-left: 16px;
}

input::placeholder {
  color: var(--blue-primary);
  font-family: var(--font-family-text);
}

button {
  background-color: var(--blue-primary);
  border: none;
  color: var(--purple-light-2);
  font-weight: var(--font-weight-text2);
  font-size: 14px;
  cursor: pointer;
}

/* Shared */
.header-container,
.trendingPreview-header,
.categoriesPreview-container {
  padding: 0 24px;
}

.trendingPreview-container,
.categoriesPreview-container,
footer {
  margin-top: 48px;
}

.trendingPreview-header,
.categoriesPreview-title {
  margin-bottom: 24px;
}

.movie-container {
  cursor: pointer;
}

.movie-img {
  border-radius: 8px;
}

.categoriesPreview-list,
.categories-list {
  display: flex;
  align-items: center;
  justify-content: space-between;
  position: relative;
  flex-wrap: wrap;
}

/* Header */
.header-container {
  padding-top: 40px;
}

.header-container--long {
  background-size: cover !important;
  height: 480px;
  position: fixed;
  top: 0;
  width: 100%;
}

.header-container--categoryView {
  background: var(--idColor);
}

.id28 {
  --idColor: linear-gradient(
    180deg,
    var(--orange) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id12 {
  --idColor: linear-gradient(
    180deg,
    var(--red) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id16 {
  --idColor: linear-gradient(
    180deg,
    var(--green) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id35 {
  --idColor: linear-gradient(
    180deg,
    var(--lightBlue) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id80 {
  --idColor: linear-gradient(
    180deg,
    var(--pink) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id99 {
  --idColor: linear-gradient(
    180deg,
    var(--purple-dark-1) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id18 {
  --idColor: linear-gradient(
    180deg,
    var(--purple-medium-1) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id10751 {
  --idColor: linear-gradient(
    180deg,
    var(--orange) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id14 {
  --idColor: linear-gradient(
    180deg,
    var(--red) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id36 {
  --idColor: linear-gradient(
    180deg,
    var(--green) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id27 {
  --idColor: linear-gradient(
    180deg,
    var(--lightBlue) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id10402 {
  --idColor: linear-gradient(
    180deg,
    var(--pink) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id9648 {
  --idColor: linear-gradient(
    180deg,
    var(--purple-dark-1) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id10749 {
  --idColor: linear-gradient(
    180deg,
    var(--purple-medium-1) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id878 {
  --idColor: linear-gradient(
    180deg,
    var(--orange) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id10770 {
  --idColor: linear-gradient(
    180deg,
    var(--red) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id53 {
  --idColor: linear-gradient(
    180deg,
    var(--green) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id10752 {
  --idColor: linear-gradient(
    180deg,
    var(--lightBlue) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}
.id37 {
  --idColor: linear-gradient(
    180deg,
    var(--pink) 0%,
    rgba(238, 204, 117, 0) 72.92%
  );
}

.header-title {
  margin-bottom: 16px;
  color: var(--purple-light-1);
}

.header-arrow {
  font-weight: var(--font-weight-text2);
  font-size: 36px;
  margin-bottom: 16px;
  cursor: pointer;
  display: inline-block;
}
.header-arrow--white {
  color: var(--purple-light-1);
}

.header-searchForm {
  box-shadow: 25px 25px 40px #090d16, -25px -25px 40px #253556;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  flex-wrap: nowrap;
}

.header-searchForm input {
  /* color: var(--blue-primary); */
  height: 48px;
  width: 100%;
  border-top-left-radius: 8px;
  border-bottom-left-radius: 8px;
}
.header-searchForm button {
  width: 56px;
  height: 48px;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

/* Trending */
.trendingPreview-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.trendingPreview-header h2 {
  color: var(--purple-light-1);
}

.trendingPreview-btn {
  box-shadow: 7px 7px 14px #090d16, -7px -7px 14px #253556;
  border-radius: 8px;
  height: 32px;
  width: 72px;
}

.trendingPreview-movieList {
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  height: 241px;
  padding-left: 24px;
  padding-bottom: 16px;
}

.trendingPreview-movieList .movie-container {
  display: inline-block;
  margin-right: 8px;
}

.trendingPreview-movieList .movie-container .movie-img {
  height: 225px;
  min-height: 225px;
  max-height: 225px;
  width: 150px;
  min-width: 150px;
  max-width: 150px;
}

/* Categories */
.category-container {
  width: 45%;
}

.categoriesPreview-title {
  color: var(--purple-light-1);
}

.category-title {
  color: var(--purple-light-1);
  margin-bottom: 8px;
  cursor: pointer;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.category-title::before {
  content: "••••";
  color: transparent;
  /* TODO: cambiar color por ID de la categoría */
  background-color: var(--idColor);
  border-radius: 8px;
  margin-right: 8px;
  width: 8px;
  height: 8px;
}
#id28 {
  --idColor: var(--orange);
}
#id12 {
  --idColor: var(--red);
}
#id16 {
  --idColor: var(--green);
}
#id35 {
  --idColor: var(--lightBlue);
}
#id80 {
  --idColor: var(--pink);
}
#id99 {
  --idColor: var(--purple-dark-1);
}
#id18 {
  --idColor: var(--purple-medium-1);
}
#id10751 {
  --idColor: var(--orange);
}
#id14 {
  --idColor: var(--red);
}
#id36 {
  --idColor: var(--green);
}
#id27 {
  --idColor: var(--lightBlue);
}
#id10402 {
  --idColor: var(--pink);
}
#id9648 {
  --idColor: var(--purple-dark-1);
}
#id10749 {
  --idColor: var(--purple-medium-1);
}
#id878 {
  --idColor: var(--orange);
}
#id10770 {
  --idColor: var(--red);
}
#id53 {
  --idColor: var(--green);
}
#id10752 {
  --idColor: var(--lightBlue);
}
#id37 {
  --idColor: var(--pink);
}

/* Generic List (search, trending & category) */
.genericList-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 32px 24px;
}

.genericList-container .movie-container {
  display: inline-block;
  width: 47.5%;
}

.genericList-container .movie-img {
  width: 100%;
}

.unfounded-container {
  width: 100%;
  display: grid;
  place-items: center;
}

.unfounded-container h2 {
  text-align: center;
  width: 90%;
  overflow-wrap: break-word;
  font-size: 24px;
  color: var(--purple-light-1);
}

.unfounded-container img {
  width: 100%;
}

/* Movie Detail */

#movieDetail .category-title {
  color: var(--purple-dark-2);
}

.movieDetail-container {
  border-top-left-radius: 16px;
  border-top-right-radius: 16px;
  padding: 32px 24px;
  margin-top: 403px;
  z-index: 1;
  position: absolute;
  background-color: var(--purple-light-1);
}

.movieDetail-title {
  display: inline-block;
  width: 80%;
  margin: 0 0 16px 0;
  padding: 0;
}

.movieDetail-score {
  display: inline-block;
  text-align: right;
  width: 18%;
  font-weight: var(--font-weight-title2);
}
.movieDetail-score::before {
  content: "★";
  color: var(--orange);
  padding-right: 4px;
}

.movieDetail-description {
  margin: 0 0 24px 0;
}

.relatedMovies-container {
  margin-top: 24px;
  height: 216px;
}

.relatedMovies-title {
  margin-bottom: 16px;
}

.relatedMovies-scrollContainer {
  position: absolute;
  overflow-x: scroll;
  overflow-y: hidden;
  white-space: nowrap;
  width: calc(100vw - 24px);
  padding-bottom: 16px;
}

.relatedMovies-scrollContainer .movie-container {
  display: inline-block;
  margin-right: 8px;
}

.relatedMovies-scrollContainer .movie-img {
  width: 125px;
  min-width: 125px;
  max-width: 125px;
  height: 187.5px;
  min-height: 187.5px;
  max-height: 187.5px;
}

/* Footer */
footer {
  background-color: var(--blue-primary);
  box-shadow: 38px 38px 75px #090d16, -38px -38px 75px #253556;
  color: var(--purple-light-2);
  text-align: center;
  height: 48px;
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Navigation */
.inactive {
  display: none;
}

